# ESP8266SAM

./: .gitignore  CMakeLists.txt  ESP8266SAM.ino  README.md  RenderTabs.h  SAM.ino  library.json  library.properties  reciter.c  render.c  sam.c  sam.h
components/ESPIDF-SAM/: CMakeLists.txt  component.mk
components/ESPIDF-SAM/src/: ReciterTabs.h  SamTabs.h  reciter.c  sam.c
examples/Speak/: Speak.ino
examples/remoteSAM/: remoteSAM.ino
main/: CMakeLists.txt  main.cpp  sound.h
src/: ESP8266SAM.cpp  ESP8266SAM.h  ReciterTabs.h  RenderTabs.h  SamData.h  SamTabs.h  reciter.c  render.c  sam.c
